# src/app/counterparty/dtos/counterparty-archive/counterparty-archive.dto.validation.ts
@@ -1,12 +1,0 @@
-import z from 'zod';
-
-import counterpartyError from '@domain/counterparty/errors/counterparty.error';
-
-const invalidVersionKey = new counterpartyError.InvalidVersion().errorKey;
-
-export const counterpartyArchiveReqValidation = z.strictObject({
-  expectedVersion: z
-    .number(invalidVersionKey)
-    .int(invalidVersionKey)
-    .positive(invalidVersionKey),
-});
