# src/app/journal-entry/dtos/journal-entry-rectification/journal-entry-rectification.dto.ts
@@ -28,7 +28,6 @@ interface ITransferJournalEntryRectificationLineReq {
 }
 
 interface IBaseJournalEntryRectificationReq {
-  expectedVersion: number;
   attachments: IFileAttachment[];
   effectiveDate: Date;
   postedAt: Date | null;
